--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,16 +1,12 @@
 version: "3.7"
 services:
-#  gin-app:
-#    build: .
-#    ports:
-#      - "9080:8080"
   kong-redis:
     image: redis:latest
     volumes:
       - ./db/redis:/data
     ports:
       - "6379:6379"
-  kong-database:
+  kong-psql:
     image: postgres:9.6
     volumes:
       - ./db/psql:/var/lib/postgresql/data
@@ -20,32 +16,42 @@ services:
       - POSTGRES_PASSWORD=kongpass
     ports:
       - "5432:5432"
+#  kong-gateway-db-bootstrap:
+#    image: kong/kong-gateway:3.1.1.3-alpine
+#    restart: on-failure
+#    depends_on:
+#      - kong-psql
+#    environment:
+#      - KONG_DATABASE=postgres
+#      - KONG_PG_HOST=kong-psql
+#      - KONG_PG_USER=kong
+#      - KONG_PG_PASSWORD=kongpass
+#    command: kong migrations bootstrap
   kong-gateway:
     image: kong/kong-gateway:3.1.1.3-alpine
     restart: on-failure
     volumes:
-      - ./bin/go-wait:/usr/local/bin/go-wait
       - ./bin/proxy-cache-graphql:/usr/local/bin/proxy-cache-graphql
       - ./kong/plugins/hello-world:/usr/local/share/lua/5.1/kong/plugins/hello-world
     depends_on:
-      - kong-database
-#    command: kong migrations bootstrap
+      - kong-psql
+#      - kong-gateway-db-bootstrap
     environment:
       - KONG_DATABASE=postgres
-      - KONG_PG_HOST=kong-database
+      - KONG_PG_HOST=kong-psql
       - KONG_PG_USER=kong
       - KONG_PG_PASSWORD=kongpass
-#      - KONG_LOG_LEVEL=info
       - KONG_PROXY_ACCESS_LOG=/dev/stdout
       - KONG_ADMIN_ACCESS_LOG=/dev/stdout
       - KONG_PROXY_ERROR_LOG=/dev/stderr
       - KONG_ADMIN_ERROR_LOG=/dev/stderr
       - KONG_ADMIN_LISTEN=0.0.0.0:8001
       - KONG_ADMIN_GUI_URL=http://localhost:8002
-      - KONG_PLUGINS=proxy-cache-graphql, go-wait, hello-world
-      - KONG_PLUGINSERVER_NAMES=proxy-cache-graphql, go-wait, num2word
-      - KONG_PLUGINSERVER_GO_WAIT_QUERY_CMD=/usr/local/bin/go-wait -dump
+      - KONG_PLUGINS=proxy-cache-graphql, hello-world
+      - KONG_PLUGINSERVER_NAMES=proxy-cache-graphql
       - KONG_PLUGINSERVER_PROXY_CACHE_GRAPHQL_QUERY_CMD=/usr/local/bin/proxy-cache-graphql -dump
+      - REDIS_HOST=kong-redis
+      - REDIS_PORT=6379
     ports:
       - "8000:8000"
       - "8443:8443"
@@ -55,3 +61,9 @@ services:
       - "8445:8445"
       - "8003:8003"
       - "8004:8004"
+  fiber-app:
+    build: ./fiber-app/.
+    volumes:
+      - ./fiber-app:/fiber-app
+    ports:
+      - "9080:9080"
