integrate log to promtail loki

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@ KONG_REDIS_MASTER_PORT=6379
 KONG_REDIS_REPLICAS_HOST=kong-redis-replicas
 KONG_REDIS_REPLICAS_PORT=6380
 REDIS_DB=0
+
+KONG_PG_HOST=kong-psql
+KONG_PG_USER=kong
+KONG_PG_DATABASE=kong
+KONG_PG_PASSWORD=kongpass
