refactor check health master

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,17 +4,16 @@ services:
     image: redis:latest
     command: "redis-server --replica-read-only no"
     volumes:
-      - ./db/redis:/data
+      - ./db/redis_master:/data
     ports:
       - "6379:6379"
   kong-redis-replicas:
     image: redis:latest
-    command: "redis-server --replicaof kong-redis 6379 --replica-read-only no"
+    command: "redis-server --replica-read-only no"
     ports:
       - "6380:6379"
-    restart: on-failure
-    depends_on:
-      - kong-redis
+    volumes:
+      - ./db/redis_replicas:/data
   kong-psql:
     image: postgres:9.6
     volumes:
@@ -78,14 +77,14 @@ services:
       - "8004:8004"
   kong-promtail:
     image: grafana/promtail:main
-    command: -config.file=/etc/promtail/config.yaml
+    command: -config.file=/etc/promtail/promtail.yaml
     volumes:
-      - ./promtail:/etc/promtail
+      - ./config:/etc/promtail
       - ./logs:/var/log
   kong-prometheus:
     image: prom/prometheus
     volumes:
-      - ./promtail/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./config/prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
       - "9090:9090"
 
