--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ KONG_PG_HOST=kong-psql
 KONG_PG_USER=kong
 KONG_PG_DATABASE=kong
 KONG_PG_PASSWORD=kongpass
+
+KONG_ADMIN_GUI_URL=http://localhost:8002
