--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,17 +26,17 @@ services:
       - POSTGRES_PASSWORD=kongpass
     ports:
       - "5432:5432"
-  kong-gateway-db-bootstrap:
-    image: kong/kong-gateway:3.1.1.3-alpine
-    restart: on-failure
-    depends_on:
-      - kong-psql
-    environment:
-      - KONG_PG_HOST=${KONG_PG_HOST}
-      - KONG_PG_USER=${KONG_PG_USER}
-      - KONG_PG_DATABASE=${KONG_PG_DATABASE}
-      - KONG_PG_PASSWORD=${KONG_PG_PASSWORD}
-    command: kong migrations bootstrap
+#  kong-gateway-db-bootstrap:
+#    image: kong/kong-gateway:3.1.1.3-alpine
+#    restart: on-failure
+#    depends_on:
+#      - kong-psql
+#    environment:
+#      - KONG_PG_HOST=${KONG_PG_HOST}
+#      - KONG_PG_USER=${KONG_PG_USER}
+#      - KONG_PG_DATABASE=${KONG_PG_DATABASE}
+#      - KONG_PG_PASSWORD=${KONG_PG_PASSWORD}
+#    command: kong migrations bootstrap
   kong-gateway:
     image: kong/kong-gateway:3.1.1.3-alpine
     restart: on-failure
@@ -45,7 +45,7 @@ services:
       - ./logs:/home/kong/logs
     depends_on:
       - kong-psql
-      - kong-gateway-db-bootstrap
+#      - kong-gateway-db-bootstrap
     environment:
       - KONG_REDIS_MASTER_HOST=${KONG_REDIS_MASTER_HOST}
       - KONG_REDIS_MASTER_PORT=${KONG_REDIS_MASTER_PORT}
