--- a/config/promtail.yaml
+++ b/config/promtail.yaml
@@ -10,12 +10,14 @@ client:
 
 scrape_configs:
   - job_name: system
+    # transform log content
     pipeline_stages:
       - json:
           expressions:
             level: level
       - labels:
           level:
+    # define log target
     static_configs:
       - targets:
           - localhost
